unpackaged/main/default/objects/Affiliation__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Scholars</relationshipLabel>
    <relationshipName>Partner_Affiliations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>