unpackaged/main/default/objects/Affiliation__c/fields/Scholar_Account__c.field-meta.xml
<CustomField>
    <fullName>Scholar_Account__c</fullName>
    <label>Scholar Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Scholar_Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>